--- a/index.html
+++ b/index.html
@@ -46,6 +46,120 @@ routine assignments, quick, ingenious, good at many things"</FONT></B></CENTER>
 <HR>
 
 <CENTER>
+<TABLE border=0 cellSpacing=0 width=728>
+  <TBODY>
+  <TR>
+    <TD vAlign=center width="50%" colSpan=2>
+      <CENTER><B><I><FONT size=+2>Active Interests</FONT></I></B></CENTER></TD>
+    <TD vAlign=center width="50%" colSpan=2>
+      <CENTER><B><I><FONT size=+2>Other Interests</FONT></I></B></CENTER></TD></TR>
+  <TR>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>Open World Visual Object Non-Recognition</FONT></I></B></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>Digital Photography and Post Processing</FONT></I></B></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>Hebrew Language</FONT></I></B></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>Speech Recognition</FONT></I></B></CENTER></TD></TR>
+  <TR>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>Flute </FONT></I></B></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>Piano</FONT></I></B></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>CD Music</FONT></I></B></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>Pipe Organs </FONT></I></B></CENTER></TD></TR>
+  <TR>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>Mac OS</FONT></I></B></CENTER></TD>
+    <TD vAlign=center width="25%">Linux OS
+      <CENTER><B><I><FONT size=-1>Raspberry Pi OS</FONT></I></B></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>Windows B4 Win11</FONT></I></B></CENTER></TD>
+  <TR>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>Computers</FONT></I></B></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>Over The Air HDTV</FONT></I></B></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>Scuba Diving </FONT></I></B></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>Bonsai</FONT></I></B></CENTER></TD></TR>
+  <TR>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>Bicycling</FONT></I></B></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>Electric Vehicles</FONT></I></B></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>Grapho-analysis</FONT></I></B></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>Ice Skating</FONT></I></B></CENTER></TD></TR>
+  <TR>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>Autonomous Robots</FONT></I></B></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>Kibbutzim</FONT></I></B></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>Flight Sim</FONT></I></B></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>Flying</FONT></I></B></CENTER></TD></TR>
+  <TR>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1></FONT></I></B></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>70 Gremlin, 69 MGB</FONT></I></B></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>RX-7, 92 Miata</FONT></I></B></CENTER></TD></TR>
+  <TR>
+    <TD vAlign=center width="25%">
+      <CENTER></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER></CENTER></TD>
+  <TR>
+    <TD vAlign=center width="25%">
+      <CENTER></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>Conceptual Graphs</FONT></I></B></CENTER></TD>
+  <TR>
+    <TD vAlign=center width="25%">
+      <CENTER></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1></FONT></I></B></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>Korean Language</FONT></I></B></CENTER></TD></TR>
+  <TR>
+    <TD vAlign=center width="25%">
+      <CENTER></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>RC Cars, Planes,
+      Sailplane</FONT></I></B></CENTER></TD>
+    <TD vAlign=center width="25%">
+      <CENTER><B><I><FONT size=-1>Knowledge Based
+      Reasoning</FONT></I></B></CENTER></TD></TR>
+  <TR>
+    <TD></TD>
+    <TD></TD>
+    <TD>
+      <CENTER><B><I><FONT size=-1>Sci-Fi</FONT></I></B></CENTER></TD>
+    <TD>
+      <CENTER><B><I><FONT size=-1>Machine Breads</FONT></I></B></CENTER></TD></TR></TBODY></TABLE></CENTER>
+<P>
+<HR>
+
+
+
+
+<CENTER>
 <P>&copy; 2026 slowrunner. All rights reserved.
 <P>Mail-to: slowrunner at no-reply dot com
 <P>Site updated Jan 2026
